--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "class-transformer-validator": "0.9.1",
     "class-validator": "0.13.2",
     "express": "4.17.2",
+    "express-ipfilter": "^1.2.0",
     "handy-redis": "2.3.1",
     "node-json-db": "1.4.1",
     "redis": "3.1.2",
@@ -83,7 +84,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "jest": "27.4.7",
     "madge": "^5.0.1",
-    "nodemon": "2.0.15",
+    "nodemon": "^2.0.19",
     "onchange": "7.1.0",
     "pre-commit": "1.2.2",
     "prettier": "^2.5.1",
